# Objectomat

./: CMakeLists.txt  build.bat
libraries/SFML-2.5.1/include/SFML/System/: Vector2.hpp
meshData/: shapeData.txt  staticMeshData.txt
src/: CMakeLists.txt  actions.cpp  actions.h  ant.h  bodyPresets.h  bodys.cpp  common.h  fileReader.cpp  fileReader.h  main.cpp  mathFunc.cpp  maths.cpp  mesh.cpp  mesh.h  meshVertex.cpp  meshVertex.h  transform.h  triangle.h
